RESOLVED FIXED226074
Fix use after move bug in WebXRSession
https://bugs.webkit.org/show_bug.cgi?id=226074
Summary Fix use after move bug in WebXRSession
Imanol Fernandez
Reported 2021-05-21 03:29:10 PDT
There is a FrameData use after move in WebXR session, which is causing most of WebXR tests to fail while testing WPE. This is a regression from Bug 225428.
Attachments
Patch (14.91 KB, patch)
2021-05-21 03:53 PDT, Imanol Fernandez
ews-feeder: commit-queue-
Patch (14.88 KB, patch)
2021-05-21 04:51 PDT, Imanol Fernandez
no flags
Patch for landing (14.93 KB, patch)
2021-05-21 08:13 PDT, Imanol Fernandez
no flags
Imanol Fernandez
Comment 1 2021-05-21 03:53:04 PDT
Imanol Fernandez
Comment 2 2021-05-21 04:51:43 PDT
Created attachment 429284 [details] Patch Fix compilation failure in Cocoa
EWS
Comment 3 2021-05-21 08:01:39 PDT
/Volumes/Data/worker/Commit-Queue/build/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Imanol Fernandez
Comment 4 2021-05-21 08:13:21 PDT
Created attachment 429291 [details] Patch for landing
EWS
Comment 5 2021-05-21 08:55:52 PDT
Committed r277862 (238004@main): <https://commits.webkit.org/238004@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429291 [details].
Radar WebKit Bug Importer
Comment 6 2021-05-21 08:56:16 PDT
Note You need to log in before you can comment on or make changes to this bug.