Fix use after move bug in WebXRSession https://bugs.webkit.org/show_bug.cgi?id=226074

Reviewed by Sergio Villar Senin.

Source/WebCore:

This patch fixes FrameData usage after move in WebXRSession, a regression from bug 226074.
It also removes an unneeded FrameData copy into WebXRFrame.

Tested by WebXR WPT.

* Modules/webxr/WebXRFrame.cpp: Use frameData from session instead of holding an extra copy
(WebCore::WebXRFrame::populatePose):
(WebCore::WebXRFrame::getViewerPose):
* Modules/webxr/WebXRFrame.h: Remove setFrameData and m_data.
(WebCore::WebXRFrame::setTime):
* Modules/webxr/WebXRSession.cpp: Fix usage after move.
(WebCore::WebXRSession::onFrame):
* platform/xr/PlatformXR.h:
(PlatformXR::Device::FrameData::copy const): Add missing members in the copy function.

LayoutTests:

Update WebXR test expectations.

* platform/wpe/TestExpectations:


Canonical link: https://commits.webkit.org/238004@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277862 268f45cc-cd09-0410-ab3c-d52691b4dbfc